# trading-ecosystem

./: CMakeLists.txt  README.md  main.cpp  trader.py
bench/: benchmark.cpp
hft-matching-engine/: ObjectPool.hpp  Order.hpp  OrderBook.hpp  OrderQueue.hpp
market-connectivity/: NetworkMessages.hpp  TcpServer.hpp
tests/: unit_tests.cpp
